Stub out game processing loop.