@@ -1,36 +1,127 @@
 package org.homepoker.game.cash;
 
+import jakarta.annotation.PreDestroy;
+import lombok.extern.slf4j.Slf4j;
 import org.homepoker.lib.exception.ValidationException;
 import org.homepoker.game.*;
 import org.homepoker.model.game.*;
+import org.homepoker.security.SecurityUtilities;
+import org.homepoker.threading.VirtualThreadManager;
 import org.homepoker.user.UserManager;
+import org.homepoker.utils.TimeUtils;
 import org.jctools.maps.NonBlockingHashMap;
 import org.springframework.data.mongodb.core.MongoOperations;
 import org.springframework.data.mongodb.core.query.Criteria;
 import org.springframework.stereotype.Service;
 import org.springframework.util.Assert;
 
+import java.time.Duration;
 import java.time.Instant;
-import java.time.temporal.ChronoUnit;
+import java.time.ZonedDateTime;
 import java.util.*;
+import java.util.concurrent.ScheduledFuture;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicBoolean;
 
 import static org.springframework.data.mongodb.core.query.Query.query;
 
 @Service
+@Slf4j
 public class CashGameService {
 
   private final CashGameRepository gameRepository;
   private final UserManager userManager;
+  private final SecurityUtilities securityUtilities;
   private final MongoOperations mongoOperations;
+  private final VirtualThreadManager threadManager;
+  private final ScheduledFuture<?> gamesScheduler;
+
+  /**
+   * This is an atomic boolean that is used to ensure that only one thread is processing the game loop at a time.
+   */
+  private final AtomicBoolean processLock = new AtomicBoolean(false);
 
   //I am using a non-blocking variant of ConcurrentHashMap so I can use an atomic computeIfAbsent
   //without blocking the event loop.
   private final Map<String, GameManager<CashGame>> gameManagerMap = new NonBlockingHashMap<>();
 
-  public CashGameService(CashGameRepository gameRepository, UserManager userManager, MongoOperations mongoOperations) {
+  private Instant lastGameCheck = Instant.now().minusSeconds(1);
+
+  public CashGameService(CashGameRepository gameRepository, UserManager userManager, SecurityUtilities securityUtilities,
+                         MongoOperations mongoOperations, VirtualThreadManager threadManager) {
     this.gameRepository = gameRepository;
     this.userManager = userManager;
     this.mongoOperations = mongoOperations;
+    this.securityUtilities = securityUtilities;
+    this.threadManager = threadManager;
+
+    // Set up a scheduled task to run every minute on the "real" clock time.
+    ZonedDateTime now = ZonedDateTime.now();
+    long initialDelay = Duration.between(now, now.plusSeconds(2).withNano(0)).toMillis();
+    gamesScheduler = threadManager.getScheduler().scheduleAtFixedRate(
+        this::processGames, initialDelay, 1000, TimeUnit.MILLISECONDS);
+  }
+
+  /**
+   * Currently we have a top-level scheduler that runs every second. This method will farm out additional threads
+   * to process each game to check if new games should be loaded/started.
+   */
+  void processGames() {
+
+    if (!processLock.compareAndSet(false, true)) {
+      // Any additional virtual threads should simply return if there is already a processing thread in progress.
+      log.warn("Game processing thread is already running, is it taking too long to process games?");
+      return;
+    }
+
+    try {
+      log.info("Processing Games " + Instant.now());
+
+      if (Instant.now().isAfter(lastGameCheck)) {
+        // Spin up a new thread to load any new games that are not yet in memory (we do this once a minute)
+        threadManager.getExecutor().submit(this::loadNewGames);
+      }
+
+      for (GameManager<CashGame> gameManager : List.copyOf(gameManagerMap.values())) {
+        if (gameManager.gameStatus() == GameStatus.COMPLETED) {
+          // Remove the game manager from the map if the game is completed.
+          gameManagerMap.remove(gameManager.gameId());
+        }
+        // Spin up a new thread to process each game
+        threadManager.getExecutor().submit(gameManager::processGameTick);
+      }
+    } catch (Exception e) {
+      log.error("Error processing games", e);
+    } finally {
+      // Release the lock
+      processLock.set(false);
+    }
+  }
+
+  protected void loadNewGames() {
+    try {
+      lastGameCheck = TimeUtils.computeNextWallMinute();
+
+      Instant startOfDay = TimeUtils.computeNextWallMinute();
+      Instant endOfDay = startOfDay.plus(Duration.ofDays(1));
+
+      GameCriteria criteria = GameCriteria.builder()
+          .statuses(List.of(GameStatus.SCHEDULED, GameStatus.PAUSED, GameStatus.PAUSED))
+          .startTime(startOfDay)
+          .endTime(endOfDay)
+          .build();
+      List<CashGameDetails> games = findGames(criteria);
+      log.info("Found {} games scheduled for today.", games.size());
+      for (CashGameDetails game : games) {
+        getGameManger(game.id());
+      }
+    } catch (Exception e) {
+      log.error("Error loading new games", e);
+    }
+  }
+  @PreDestroy
+  public void shutdown() {
+    gamesScheduler.cancel(true);
   }
 
   /**
@@ -41,24 +132,22 @@ public class CashGameService {
    */
   public List<CashGameDetails> findGames(GameCriteria criteria) {
 
-    if (criteria == null ||
-        (criteria.status() == null && criteria.startDate() == null && criteria.endDate() == null)) {
+    if (criteria.statuses() == null && criteria.startTime() == null && criteria.endTime() == null) {
       //No criteria provided, return all games.
       return gameRepository.findAll().stream().map(CashGameService::gameToGameDetails).toList();
     }
 
     Criteria mongoCriteria = new Criteria();
 
-    if (criteria.status() != null) {
-      mongoCriteria.and("status").is(criteria.status());
+    if (criteria.statuses() != null) {
+      mongoCriteria.and("status").in(criteria.statuses());
     }
-    if (criteria.startDate() != null) {
-      mongoCriteria.and("startTimestamp").gte(criteria.startDate());
-    }
-    if (criteria.endDate() != null) {
-      //The end date is intended to include any timestamp in that day, we just add one to the
-      //day to insure we get all games on the end date.
-      mongoCriteria.and("endTimestamp").lte(criteria.endDate().plus(1, ChronoUnit.DAYS));
+    if (criteria.startTime() != null && criteria.endTime() != null) {
+      mongoCriteria.and("startTime").gte(criteria.startTime()).lte(criteria.endTime());
+    } else if (criteria.startTime() != null) {
+      mongoCriteria.and("startTime").gte(criteria.startTime());
+    } else if (criteria.endTime() != null) {
+      mongoCriteria.and("startTime").lte(criteria.endTime());
     }
 
     return mongoOperations.query(CashGame.class)
@@ -79,8 +168,10 @@ public class CashGameService {
         (id) -> {
           //If the game manager is not yet in memory, we retrieve the game from
           //the database and materialize the game manager
-          return new CashGameManager(gameRepository.findById(gameId)
-              .orElseThrow(() -> new ValidationException("The cash game [" + gameId + "] does not exist.")), this);
+          CashGame game = gameRepository.findById(gameId).orElseThrow(
+              () -> new ValidationException("The cash game [" + gameId + "] does not exist.")
+          );
+          return new CashGameManager(game, this,  userManager, securityUtilities);
         });
   }
 
@@ -150,9 +241,10 @@ public class CashGameService {
    */
   private CashGame applyDetailsToGame(CashGame game, CashGameDetails gameDetails) {
 
-    if (game.status() != null && game.status() != GameStatus.SCHEDULED) {
+    if (game.status() != GameStatus.SCHEDULED) {
       throw new ValidationException("You can only update the details of the game prior to it starting");
     }
+    Assert.notNull(gameDetails.type(), "The game type is required when creating a game.");
     Assert.hasText(gameDetails.name(), "The name is required when creating a game.");
     Assert.notNull(gameDetails.maxBuyIn(), "The max buy-in amount is required when creating a game.");
     Assert.notNull(gameDetails.owner(), "The game owner is required when creating a game.");
@@ -162,19 +254,16 @@ public class CashGameService {
     //"now" and immediately transition game to a "paused" state. The owner can then choose when they want to
     //"un-pause" game.
     Instant now = Instant.now();
-    Instant startTimestamp = gameDetails.startTime();
+    Instant startTime = gameDetails.startTime();
 
     GameStatus status = GameStatus.SCHEDULED;
-    if (startTimestamp == null || now.isAfter(startTimestamp)) {
-      startTimestamp = now;
+    if (startTime == null || now.isAfter(startTime)) {
+      startTime = now;
       status = GameStatus.PAUSED;
     }
 
     //Default game type to Texas Hold'em.
     GameType gameType = gameDetails.type();
-    if (gameDetails.type() == null) {
-      gameType = GameType.TEXAS_HOLDEM;
-    }
 
     //If big blind is not explicitly passed in, we just double the small blind.
     int bigBlind = gameDetails.smallBlind() * 2;
@@ -188,18 +277,15 @@ public class CashGameService {
     game = game.withName(gameDetails.name());
     game = game.withType(gameType);
     game = game.withStatus(status);
-    game = game.withStartTime(startTimestamp);
+    game = game.withStartTime(startTime);
     game = game.withMaxBuyIn(gameDetails.maxBuyIn());
     game = game.withSmallBlind(gameDetails.smallBlind());
     game = game.withBigBlind(bigBlind);
     game = game.withOwner(gameDetails.owner());
 
-    if (game.players() == null) {
-      game = game.withPlayers(new HashMap<>());
-    }
     if (!game.players().containsKey(game.owner().loginId())) {
       Player player = Player.builder().user(game.owner()).confirmed(true).status(PlayerStatus.AWAY).build();
-      game.players().put(game.owner().loginId(), player);
+      game = game.withPlayer(player);
     }
     return game;
   }
@@ -220,7 +306,7 @@ public class CashGameService {
         .owner(game.owner())
         .smallBlind(game.smallBlind())
         .bigBlind(game.bigBlind())
-        .players(game.players() == null ? Collections.emptyList() : new ArrayList<>(game.players().values()))
+        .players(List.copyOf(game.players().values()))
         .build();
   }
 
